SERVER-6625 Log commands as commands instead of queries in top stats